@@ -27,7 +27,7 @@ from django.conf import settings
 from django.forms import CheckboxInput, ModelForm, NumberInput, Select, TextInput, Textarea, HiddenInput
 
 # Django project imports
-from gui.forms.form_utils import NoValidationField
+from gui.forms.form_utils import NoValidationField, bootstrap_tooltips
 from applications.backend.models import (Backend, Server, MODE_CHOICES, BALANCING_CHOICES, HEALTH_CHECK_TCP_EXPECT_CHOICES,
                                          HEALTH_CHECK_EXPECT_CHOICES, HEALTH_CHECK_METHOD_CHOICES, HEALTH_CHECK_VERSION_CHOICES)
 from system.pki.models import TLSProfile
@@ -38,7 +38,6 @@ from system.pki.models import TLSProfile
 
 # Logger configuration imports
 import logging
-
 logging.config.dictConfig(settings.LOG_SETTINGS)
 logger = logging.getLogger('gui')
 
@@ -141,6 +140,7 @@ class BackendForm(ModelForm):
     def __init__(self, *args, **kwargs):
         """ Initialize form and special attributes """
         super().__init__(*args, **kwargs)
+        self = bootstrap_tooltips(self)
         # Remove the blank input generated by django
         for field_name in ['mode', 'balancing_mode', 'tcp_health_check_expect_match']:
             self.fields[field_name].empty_label = None
@@ -223,6 +223,7 @@ class ServerForm(ModelForm):
         kwargs['auto_id'] = False
         mode = kwargs.pop('mode', '')
         super().__init__(*args, **kwargs)
+        self = bootstrap_tooltips(self)
         # Remove the blank input generated by django
         self.fields['tls_profile'].empty_label = "Plain text"
         self.fields['tls_profile'].required = False
