@@ -31,6 +31,7 @@ from django.utils.translation import gettext_lazy as _
 # Django project imports
 from authentication.ldap.models import (LDAPRepository, LDAPCustomAttributeMapping,
                                         LDAP_ENC_SCHEMES_CHOICES, LDAP_PROTO_CHOICES, LDAP_SCOPES_CHOICES)
+from gui.forms.form_utils import bootstrap_tooltips
 
 # Extern modules imports
 from re import match as re_match
@@ -82,6 +83,7 @@ class LDAPRepositoryForm(ModelForm):
 
     def __init__(self, *args, **kwargs):
         super().__init__(*args, **kwargs)
+        self = bootstrap_tooltips(self)
         # Remove the blank input generated by django
         for field_name in ['protocol', 'encryption_scheme', 'user_scope', 'group_scope']:
             self.fields[field_name].empty_label = None
