@@ -29,6 +29,7 @@ from django.forms import URLField, BooleanField
 # Django project imports
 from authentication.openid.models import OpenIDRepository, PROVIDERS_TYPE, JWT_SIG_ALG_CHOICES
 from authentication.user_scope.models import UserScope
+from gui.forms.form_utils import bootstrap_tooltips
 
 # Extern modules imports
 from cryptography import x509
@@ -67,6 +68,7 @@ class OpenIDRepositoryForm(ModelForm):
 
     def __init__(self, *args, **kwargs):
         super().__init__(*args, **kwargs)
+        self = bootstrap_tooltips(self)
         self.fields['user_scope'].queryset = UserScope.objects.all()
         self.fields['user_scope'].empty_label = "Retrieve all claims"
         # Remove the blank input generated by django
