@@ -28,6 +28,7 @@ from django.core.validators import RegexValidator
 from django.forms import ModelForm, NumberInput, Select, TextInput
 # Django project imports
 from authentication.otp.models import OTPRepository, OTP_TYPE, OTP_PHONE_SERVICE, OTP_MAIL_SERVICE
+from gui.forms.form_utils import bootstrap_tooltips
 
 # Extern modules imports
 
@@ -56,6 +57,7 @@ class OTPRepositoryForm(ModelForm):
 
     def __init__(self, *args, **kwargs):
         super().__init__(*args, **kwargs)
+        self = bootstrap_tooltips(self)
         # Remove the blank input generated by django
         for field_name in ['otp_type', 'otp_phone_service', 'otp_mail_service']:
             self.fields[field_name].empty_label = None
