@@ -29,6 +29,7 @@ from django.forms import ModelForm, NumberInput, TextInput
 
 # Django project imports
 from authentication.radius.models import RadiusRepository
+from gui.forms.form_utils import bootstrap_tooltips
 
 # Extern modules imports
 
@@ -57,6 +58,7 @@ class RadiusRepositoryForm(ModelForm):
 
     def __init__(self, *args, **kwargs):
         super().__init__(*args, **kwargs)
+        self = bootstrap_tooltips(self)
         # Remove the blank input generated by django
         if not self.initial.get('name'):
             self.fields['name'].initial = "RADIUS Repository"
