@@ -36,6 +36,7 @@ from authentication.ldap.models import LDAPRepository
 from authentication.otp.models import OTPRepository
 from authentication.user_portal.models import (AUTH_TYPE_CHOICES, SSO_TYPE_CHOICES, SSO_CONTENT_TYPE_CHOICES, UserAuthentication)
 from authentication.user_scope.models import UserScope
+from gui.forms.form_utils import bootstrap_tooltips
 from system.pki.models import PROTOCOL_CHOICES as TLS_PROTOCOL_CHOICES, X509Certificate
 from services.frontend.models import Frontend
 
@@ -159,6 +160,7 @@ class UserAuthenticationForm(ModelForm):
 
     def __init__(self, *args, **kwargs):
         super().__init__(*args, **kwargs)
+        self = bootstrap_tooltips(self)
         # Remove the blank input generated by django
         for field_name in ['portal_template', 'repositories', 'auth_type', 'sso_forward_type']:
             self.fields[field_name].empty_label = None
