@@ -26,11 +26,12 @@ __doc__ = 'LDAP Repository model'
 from django.conf import settings
 from django.utils.translation import gettext_lazy as _
 from django.forms.models import model_to_dict
+from django.forms import (ModelForm, Select,
+                          TextInput)
 from djongo import models
 
 # Django project imports
-from django.forms import (ModelForm, Select,
-                          TextInput)
+from gui.forms.form_utils import bootstrap_tooltips
 
 # Extern modules imports
 from bson import ObjectId
@@ -217,6 +218,7 @@ class RepoAttributeForm(ModelForm):
 
     def __init__(self, *args, **kwargs):
         super().__init__(*args, **kwargs)
+        self = bootstrap_tooltips(self)
         # Remove the blank input generated by django
         for field_name in ['condition_var_kind', 'condition_criterion', 'action_var_kind', 'assignator']:
             self.fields[field_name].empty_label = None
