@@ -27,6 +27,7 @@ from django.conf import settings
 from django.forms import (CheckboxInput, ModelForm, Select, TextInput, ModelChoiceField)
 
 # Django project imports
+from gui.forms.form_utils import bootstrap_tooltips
 from services.strongswan.models import AUTHBY, DPD, KEYEXCHANGE, Strongswan, TYPE
 from system.cluster.models import Node
 
@@ -45,6 +46,7 @@ logger = logging.getLogger('gui')
 class StrongswanForm(ModelForm):
     def __init__(self, *args, **kwargs):
         super().__init__(*args, **kwargs)
+        self = bootstrap_tooltips(self)
 
         self.fields['node'] = ModelChoiceField(
             queryset=Node.objects.all(),
